deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
spec:
  replicas: REPLICA_COUNT
  selector:
    matchLabels:
      app: demo-app

  template:
    metadata:
      labels:
        app: demo-app

    spec:
      containers:
      - name: demo-app
        image: IMAGE_NAME

        ports:
        - containerPort: 5000
